优化不同操作系统下的启停